--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,9 @@ buildscript {
         classpath "com.android.tools.build:gradle:7.0.3"
         def nav_version = "2.3.5"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
-        classpath 'com.google.gms:google-services:4.3.10'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
     }
 }
 plugins {
     alias(libs.plugins.androidApplication) apply false
+    id 'com.google.gms.google-services' version '4.4.2' apply false
 }
