--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,9 @@ dependencies {
     androidTestImplementation libs.espresso.core
     annotationProcessor libs.room.compiler
     def nav_version = "2.3.5"
-    implementation "androidx.navigation:navigation-fragment:$nav_version"
-    implementation "androidx.navigation:navigation-ui:$nav_version"
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation platform('com.google.firebase:firebase-bom:33.1.2')
     implementation 'com.google.firebase:firebase-analytics'
 }
